Add tie message if there's no winner

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,15 @@ ul {
 
 .status {
     margin-bottom: 10px;
+    font-size: 30px;
+}
+
+.status.winner {
+    color: #b5e48c;
+}
+
+.status.tie {
+    color: #e63946;
 }
 
 .square {
